--- a/mobile-test-repo/pom.xml
+++ b/mobile-test-repo/pom.xml
@@ -25,6 +25,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+      <groupId>in.co.test-repo</groupId>
+      <artifactId>test-repo</artifactId>
+     <version>1.0-SNAPSHOT</version>
+     </dependency>
   </dependencies>
 
   <build>
